[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
utf8_slice = "1.0.0"
futures = "0.3.28"
